Fix accented characters (internationalization)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script type="text/javascript" src="includes/details-shim.min.js"></script>
   <link rel="stylesheet" type="text/css" href="includes/details-shim.min.css">
-  <title>Resumé - Oscar de León</title>
+  <title>Resum&eacute; - Oscar de Le&oacute;n</title>
   <link href="includes/coursera-acomplishments.css" rel="stylesheet" type="text/css" />
   <link href="includes/coursera-hut.css" rel="stylesheet" type="text/css" />
   <link href="includes/coursera-spec-container.css" rel="stylesheet" type="text/css" />
@@ -47,8 +47,8 @@
                       <div class="c-accomplishments-header-left bt3-col-xs-6">
                         <img src="www/img/avatar.jpg" class="c-accomplishments-header-image bt3-img-circle" />
                         <div class="c-accomplishments-header-text">
-                          <div class="c-accomplishments-header-name c-font-light">Oscar de León</div>
-                          <div class="c-accomplishments-header-label c-font-bold">Online resumé</div>
+                          <div class="c-accomplishments-header-name c-font-light">Oscar de Le&oacute;n</div>
+                          <div class="c-accomplishments-header-label c-font-bold">Online resum&eacute;</div>
                         </div>
                       </div>
                       <div class="bt3-col-sm-2">
@@ -78,7 +78,7 @@
                       <div class="bt3-col-sm-12">
                         </br>
                         <p>
-                            This page is an online version of my resumé.
+                            This page is an online version of my resum&eacute;.
                         </p>
                         <details open=true>
                           <summary>
