Add contact to voluntary work

--- a/index.html
+++ b/index.html
@@ -556,7 +556,8 @@
                                   <div class="bt3-col-sm-10">
                                     Data analysis advisor for the Street harassment observatory in Guatemala
                                     (citizen initiative aiming to spread awareness on street harassment and
-                                    gather data to understand and better address it)
+                                    gather data to understand and better address it)</br>
+                                    Contact: Lidia Guerra
                                   </div>
                                 </div>
                               </div>
