Fix target for duolingo certificate

--- a/index.html
+++ b/index.html
@@ -614,7 +614,11 @@
                                 
                                 <div data-js="other-record" class="c-accomplishments-list-other-record bt3-row">
                                   <div class="bt3-col-sm-4">
-                                    <a href="https://certs.duolingo.com/yjzhkmt7">English</a>
+                                    <a href="https://certs.duolingo.com/yjzhkmt7"
+                                       target="_blank"
+                                    >
+                                      English
+                                    </a>
                                   </div>
                                   <div class="bt3-col-sm-2 c-font-light">
                                     Advanced
