--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                           <div class="c-accomplishments-table-header c-font-bold bt3-col-md-12">
                             Collaborative work
                             <small class="c-font-light">
-                              Contexts in which I actually collaborate
+                              Contexts in which I currently collaborate
                             </small>
                           </div>
                         </summary>
@@ -541,7 +541,7 @@
                           <div class="c-accomplishments-table-header c-font-bold bt3-col-md-12">
                             Voluntary work
                             <small class="c-font-light">
-                              Contexts in which I actually collaborate using my skills in community outreach
+                              Contexts in which I currently collaborate using my skills in community outreach
                             </small>
                           </div>
                         </summary>
