Update references section

--- a/index.html
+++ b/index.html
@@ -744,11 +744,46 @@
                                     Vanessa Granados
                                   </div>
                                   <div class="bt3-col-sm-3">
-                                    <a href="mailto:ivgranados@uvg.edu.gt?subject=feedback">ivgranados@uvg.edu.gt</a>
+                                    <a href="mailto:ivgranados@uvg.edu.gt?subject=References">ivgranados@uvg.edu.gt</a>
                                   </div>
                                   <div class="bt3-col-sm-6">
-                                    Researcher,
-                                    Centro de Estudios en Salud,
+                                    Researcher</br>
+                                    Centro de Estudios en Salud</br>
+                                    Universidad del Valle de Guatemala
+                                  </div>
+                                </div>
+                              </div>
+                              
+                              <div>
+                                <div data-js="other-record" class="c-accomplishments-list-other-record bt3-row">
+                                  <div class="bt3-col-sm-3">
+                                    Lidia Guerra
+                                  </div>
+                                  <div class="bt3-col-sm-3">
+                                    <a href="mailto:lidiaguerra@gmail.com?subject=References">lidiaguerra@gmail.com</a>
+                                  </div>
+                                  <div class="bt3-col-sm-6">
+                                    Street harassment observatory</br>
+                                    <a href="http://ocacgt.org/"
+                                       target="blank"
+                                    >
+                                      http://ocacgt.org/
+                                    </a>
+                                  </div>
+                                </div>
+                              </div>
+                              
+                              <div>
+                                <div data-js="other-record" class="c-accomplishments-list-other-record bt3-row">
+                                  <div class="bt3-col-sm-3">
+                                    Renata Mendiz&aacute;bal de Cabrera
+                                  </div>
+                                  <div class="bt3-col-sm-3">
+                                    <a href="mailto:@ces.uvg.edu.gt?subject=References">rmendizabal@ces.uvg.edu.gt</a>
+                                  </div>
+                                  <div class="bt3-col-sm-6">
+                                    Researcher</br>
+                                    Centro de Estudios en Salud</br>
                                     Universidad del Valle de Guatemala
                                   </div>
                                 </div>
