Nicer duolingo certificate

--- a/index.html
+++ b/index.html
@@ -619,6 +619,11 @@
                                     >
                                       English
                                     </a>
+                                    <a href="https://s3.amazonaws.com/duolingo-certifications-data/certificates/yjzhkmt7/a4.pdf"
+                                       target="_blank"
+                                    >
+                                      <small class="c-font-light">(pdf certificate)</small>
+                                    </a>
                                   </div>
                                   <div class="bt3-col-sm-2 c-font-light">
                                     Advanced
