Fix reference institution

--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
                                   </div>
                                   <div class="bt3-col-sm-6">
                                     Researcher</br>
-                                    Centro de Estudios en Salud</br>
+                                    Research Institute</br>
                                     Universidad del Valle de Guatemala
                                   </div>
                                 </div>
